--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^3.2.0",
     "chartkick": "^4.0.3",
     "gsap": "^3.6.1",
+    "jquery": "^3.6.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
