--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "chartkick": "^4.0.3",
     "gsap": "^3.6.1",
     "jquery": "^3.6.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "wow.js": "^1.2.2"
   },
   "version": "0.1.0",
   "devDependencies": {
